add additional specs to README.md add image to img directory, link image in index.html format scripts.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
 #output {
   display: none;
 }
+.intro {
+  font-family: Tahoma;
+  font-style: italic;
+}
+img {
+  height: 30px;
+  width: auto;
+}
