add card and image to ouput div, remove image from jumbotron add styling to index.html spellcheck READEME.md

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 #output {
   display: none;
 }
-.intro {
+#intro {
   font-family: Tahoma;
   font-style: italic;
 }
 img {
-  height: 30px;
-  width: auto;
+  height: 400px;
+  width: 400px;
+}
+form {
+  margin-bottom: 20px;
 }
